[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/bread.png" type="Texture" id=1]
[ext_resource path="res://scenes/BurnableBread.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.1147, 25.5753 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27.4767, 12.5736 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 27.4767, 12.8787 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 27.8493, 13.1838 )

[node name="BurnableBread" type="Node2D"]
pause_mode = 1
script = ExtResource( 2 )

[node name="BurnArea" type="Area2D" parent="."]
position = Vector2( 0, -96 )

[node name="CollisionShape" type="CollisionShape2D" parent="BurnArea"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 64, 64 )

[node name="Tween" type="Tween" parent="."]

[node name="Toasting1" type="Area2D" parent="."]
position = Vector2( 0, 120 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Toasting1"]
shape = SubResource( 2 )

[node name="Toasting2" type="Area2D" parent="."]
position = Vector2( 1, 34 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Toasting2"]
shape = SubResource( 3 )

[node name="Toasting3" type="Area2D" parent="."]
position = Vector2( 0, -48 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Toasting3"]
shape = SubResource( 4 )
